--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,6 +10,12 @@ a:hover {
   background: #FF6C2F;
 }
 
+.img-thumbnail {
+  border: 0;
+  padding: 0;
+  border-radius: 0;
+}
+
 .text {
   color: #FFE15E;
 }
