still needs tweaks

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6,6 +6,16 @@ a:hover {
   color: #3599BB;
 }
 
+body {
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+}
+
+section {
+  /* color: white; */
+  scroll-snap-align: start;
+
+}
 .background {
   background: #FF6C2F;
 }
@@ -24,31 +34,6 @@ a:hover {
   font-size: 1.6em;
 }
 
-.test {
-    font-size: 5em;
-    margin-top: 25px;
-    text-align: center;
-    color: #FFE15E;
-    padding-bottom: 25px;
-
-    -webkit-animation: fadein 4s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 4s; /* Firefox < 16 */
-        -ms-animation: fadein 4s; /* Internet Explorer */
-         -o-animation: fadein 4s; /* Opera < 12.1 */
-            animation: fadein 4s;
-}
-
-@keyframes fadein {
-  from { opacity: 0;
-        transform: translate3d(0, -20%, 0);}
-  to   { opacity: 1;
-        transform: translate3d(0, 0, 0);}
-}
-
 title{
   color: #FFE15E;
-}
-.image {
-  height: 28.8vw;
-  width:43.3vw;
 }
