--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -9,7 +9,7 @@ a:hover {
 body {
   overflow-y: scroll;
   scroll-padding-top: 80px;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
 }
 
 section {
